--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -6,9 +6,9 @@
          <link rel="stylesheet" href="/css/styles.css">
      </head>
      <body>
-         <div class="main-container">
-
          {{>header}}
+         <div class="main-container">
+         <p>This site was created by Huy Truong. It uses data from mapbox.com and darksky.net!</p>
          <img src="/img/me.jpg" >
          </div>
          {{>footer}}
